ecg monitor significant update, implemented new data protocols, extracted BLE parsing into readable function (other parsing cases pending), added parsing of additional parameters

--- a/ecg_monitor/ecg_monitor.project
+++ b/ecg_monitor/ecg_monitor.project
@@ -120,6 +120,8 @@
     <File Name="sft.h"/>
     <File Name="spectrogram.c"/>
     <File Name="spectrogram.h"/>
+    <File Name="packet_parser.c"/>
+    <File Name="packet_parser.h"/>
   </VirtualDirectory>
   <Dependencies Name="Debug"/>
   <Dependencies Name="Release"/>
